[package]
name = "kadena-reth"
version = "0.1.0"
edition = "2024"

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", rev = "e95d2b463571d3207ecd63691ab0f7a51266a458" }
reth-ethereum-cli = { git = "https://github.com/paradigmxyz/reth", rev = "e95d2b463571d3207ecd63691ab0f7a51266a458" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "e95d2b463571d3207ecd63691ab0f7a51266a458" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "e95d2b463571d3207ecd63691ab0f7a51266a458" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "e95d2b463571d3207ecd63691ab0f7a51266a458" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "e95d2b463571d3207ecd63691ab0f7a51266a458" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "e95d2b463571d3207ecd63691ab0f7a51266a458" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "e95d2b463571d3207ecd63691ab0f7a51266a458" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "e95d2b463571d3207ecd63691ab0f7a51266a458" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "e95d2b463571d3207ecd63691ab0f7a51266a458" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "e95d2b463571d3207ecd63691ab0f7a51266a458" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "e95d2b463571d3207ecd63691ab0f7a51266a458" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "e95d2b463571d3207ecd63691ab0f7a51266a458" }
alloy-primitives = { version = "1.1.0", default-features = false, features = ["map-foldhash"] }

alloy-genesis = { version = "1.0.9", default-features = false }
alloy-rpc-client = { version = "1.0.9", default-features = false }
alloy-rpc-types = { version = "1.0.9", features = ["eth"], default-features = false }
alloy-sol-types = { version = "1.1.0", default-features = false }
reqwest = { version = "0.12", default-features = false }
tracing = { version = "0.1.0", default-features = false }
tokio = { version = "1.44.2", default-features = false }
clap = "4"
eyre = "0.6"
sha2 = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }

